UNRELEASED
  * see if we can load new attachment data asynchronously.
  * write more tests
  * need to improve startkey/endkey/key JSON encoding.

1.11 2009-05-08
  o CouchDB external support
    o get|put|post|delete $url, $params, $headers
  o bin/couchdb-upload - upload a directory of documents to a couch db
    o filenames map to ids
      o flatten path recursively.
    o automatic ids are given to filenames in the _auto directory

1.10 2009-04-21
  - allow the use of custom JSON encoding objects

1.09 2009-04-02
  - added support for _all_docs_by_seq
  - made boolean handling in view %options more consistent.
  - changed the view URL pattern to the new CouchDB 0.9+ style.
    (by Jan-Felix Wittmann)

1.08 2009-01-05
  - used META_MERGE instead of my Makefile.PL hack to
    exclude the eg/ directory from being indexed by CPAN
    (by Yuval Kogman)
  - added support for /db/_all_docs URL via the new open_docs() method.
    (by Jan-Felix Wittmann)

1.07 2008-12-25
  - 1.06 was a failed upload.  Let's try this again.

1.06 2008-12-25
  - not only 200 is OK, bulk docs returns 201 on success 
    (by Yuval Kogman)
  - use URI->path to set the DB name (no problems with missing leading slash)
    (by Yuval Kogman)

1.05 2008-12-10
  - Regarding RT#41596, I don't want to penalize people who
    were following the docs, so when you say
    $query->({ group => 'false' }) you'll get
    "?group=false" just like before.
    DWIM can be a double-edged sword.  :-(

1.04 2008-12-10
  - RT#41596:  accepted suggestion from bug report to change
    how the $query function deals with the 'group' parameter.
    It now translates between Perl's notion of truth to Javascript's
    formal true/false values implicitly.
  - added eg/pager example (by Jan-Felix Wittmann)

1.03 2008-10-10
  - added method for getting a server's config
  - applied patch to $query from Jan-Felix Wittmann

1.02 2008-09-15
  - added documentation for attach and detatch